@@ -1,5 +1,12 @@
 2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: fixed an issue with copying to unallocated
+	  space. It works fine now, but this entire copy operation breaks
+	  consistency a bit. I should take a look at that when i have some
+	  more time.
+
+2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core.cc: added progressfeedback to Delete()
 
 2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
